# rusteroids

./: .gitignore  Cargo.toml  DESIGN.md  README.md  build.rs  main.rs  window.rs
crates/asteroids/: Cargo.toml
crates/asteroids/src/: assets.rs  components.rs  config.rs
crates/asteroids/src/systems/: asteroid_spawn.rs  bullet_lifecycle.rs  cleanup.rs  collision.rs  scoring.rs
crates/rust_engine/: Cargo.toml  build.rs
crates/rust_engine/src/: application.rs  engine.rs  lib.rs
crates/rust_engine/src/assets/: image_loader.rs  libmod.rlib  mod.rs  obj_loader.rs  resource_manager.rs  test_texture_loading.rs
crates/rust_engine/src/assets/materials/: material_builder.rs  material_cache.rs  material_factory.rs  material_loader.rs  mod.rs  mtl_parser.rs
crates/rust_engine/src/audio/: asset.rs  mixer.rs  mod.rs  music.rs  sound_manager.rs  spatial.rs  voice_manager.rs
crates/rust_engine/src/audio/backend/: mod.rs  rodio_backend.rs
crates/rust_engine/src/backend/: mod.rs  render.rs
crates/rust_engine/src/backend/vulkan/: buffer.rs  commands.rs  context.rs  descriptor_set.rs  framebuffer.rs  mod.rs  render_pass.rs  renderer.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  uniform_buffer.rs
crates/rust_engine/src/core/: config.rs  mod.rs
crates/rust_engine/src/debug/: collision_debug.rs  draw.rs  mod.rs
crates/rust_engine/src/ecs/: component.rs  entity.rs  mod.rs  query.rs  scene_manager.rs  scheduler.rs  storage.rs  system.rs  world.rs
crates/rust_engine/src/ecs/components/: collision.rs  lifecycle.rs  lifetime.rs  lighting.rs  mod.rs  movement.rs  pickable.rs  renderable.rs  selection.rs  trail_emitter.rs  transform.rs
crates/rust_engine/src/ecs/systems/: collision_system.rs  coordinate_validation.rs  coordinate_validation_simple.rs  lighting.rs  mod.rs  picking_system.rs  renderable_collector.rs  rendering_system.rs  trail_system.rs
crates/rust_engine/src/ecs/tests/: coordinate_integration.rs  coordinate_integration_simple.rs  mod.rs
crates/rust_engine/src/events/: mod.rs
crates/rust_engine/src/foundation/: collections.rs  logging.rs  math.rs  memory.rs  mod.rs  time.rs
crates/rust_engine/src/input/: collision.rs  mod.rs  picking.rs  ui_input.rs
crates/rust_engine/src/physics/: collision.rs  collision_layers.rs  collision_system.rs  mod.rs
crates/rust_engine/src/physics/collision/: mesh.rs  mod.rs  primitives.rs  shape.rs
crates/rust_engine/src/render/: backend.rs  batch_renderer.rs  commands.rs  coordinates.rs  game_object.rs  graphics_engine_tests.rs  lighting.rs  material.rs  mesh.rs  mod.rs  render_queue.rs  renderer_config.rs  shader_config.rs  shared_resources.rs  window.rs
crates/rust_engine/src/render/api/: frame_data.rs  mod.rs  render_backend.rs
crates/rust_engine/src/render/backends/: mod.rs
crates/rust_engine/src/render/backends/vulkan/: mod.rs  object_data.rs  renderer.rs
crates/rust_engine/src/render/config/: mod.rs  renderer_config.rs
crates/rust_engine/src/render/dynamic/: data_structures.rs  instance_renderer.rs  mesh_type.rs  mod.rs  object_manager.rs  pool_manager.rs  resource_pool.rs  spawner.rs
crates/rust_engine/src/render/material/: material_manager.rs  material_type.rs  material_ubo.rs  mod.rs  texture_manager.rs
crates/rust_engine/src/render/pipeline/: mod.rs  pipeline_config.rs  pipeline_manager.rs
crates/rust_engine/src/render/primitives/: camera.rs  coordinates.rs  mesh.rs  mod.rs
crates/rust_engine/src/render/resources/: mod.rs
crates/rust_engine/src/render/resources/materials/: material.rs  material_params.rs  material_registry.rs  material_ubo.rs  mod.rs  texture_registry.rs
crates/rust_engine/src/render/resources/pipelines/: mod.rs  pipeline_config.rs  pipeline_manager.rs
crates/rust_engine/src/render/resources/shared/: game_object.rs  mod.rs  render_queue.rs  resource_factory.rs  shared_mesh_resources.rs
crates/rust_engine/src/render/systems/: mod.rs
crates/rust_engine/src/render/systems/batching/: batch_renderer.rs  mod.rs
crates/rust_engine/src/render/systems/billboard/: mod.rs  orientation.rs  renderer.rs  types.rs
crates/rust_engine/src/render/systems/dynamic/: data_structures.rs  graphics_api.rs  mesh_type.rs  mod.rs  object_manager.rs  spawner.rs
crates/rust_engine/src/render/text/: font_atlas.rs  mod.rs  text_layout.rs  text_material.rs  text_renderer.rs  world_text.rs
crates/rust_engine/src/render/vulkan/: buffer.rs  commands.rs  context.rs  descriptor_set.rs  framebuffer.rs  mod.rs  render_pass.rs  renderer.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  texture.rs  uniform_buffer.rs  vertex_layout.rs  window.rs
crates/rust_engine/src/render/window/: backend.rs  handle.rs  mod.rs
crates/rust_engine/src/scene/: mod.rs  render_queue.rs  renderable_object.rs  scene_graph.rs  scene_manager.rs  scene_renderer.rs
crates/rust_engine/src/settings/: mod.rs
crates/rust_engine/src/spatial/: mod.rs  octree.rs  spatial_query.rs
crates/rust_engine/src/ui/: backend.rs  manager.rs  mod.rs
crates/rust_engine/src/ui/input/: mod.rs  processor.rs
crates/rust_engine/src/ui/rendering/: commands.rs  data.rs  mod.rs  renderer.rs  vertex.rs
crates/rust_engine/src/ui/widgets/: button.rs  core.rs  layout.rs  mod.rs  panel.rs  text.rs
teapot_app/: Cargo.toml
teapot_app/src/: entity_system.rs  main.rs  main_dynamic.rs  main_fleet.rs  main_octree.rs  main_turret.rs
tools/screenshot_tool/: Cargo.toml  README.md  validate_rendering.bat
tools/screenshot_tool/src/: analysis.rs  main.rs
(+200 files in other folders)
