[workspace]
members = [
    "crates\\rust_engine",
    "teapot_app",
]

resolver = "2"

[workspace.dependencies]
# Core Vulkan and windowing
ash = "0.37"
ash-window = "0.12"
glfw = { version = "0.55", features = ["vulkan"] }
vk-sys = "0.5"
raw-window-handle = "0.5"
bytemuck = "1.14"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.9"

# Math
nalgebra = { version = "0.32", features = ["serde-serialize"] }
approx = "0.5"

# Image loading
image = { version = "0.25", default-features = false, features = ["png"] }

# Core utilities
bitflags = "2.4"
slotmap = "1.0"

# Memory management
vk-mem = "0.3"


[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# Allow some pedantic lints that are too restrictive for game development
module_name_repetitions = "allow"
similar_names = "allow"
too_many_arguments = "allow"
