[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"
description = "Asteroids game built with RustEngine"
license = "MIT OR Apache-2.0"
authors = ["Eric Winkler <ericrwinkler@gmail.com>"]
repository = "https://github.com/ericrwinkler/rusteroids"

[[bin]]
name = "asteroids"
path = "src/main.rs"

[dependencies]
# Engine dependency
rust_engine = { path = "../rust_engine" }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Game-specific dependencies
rand = { workspace = true }

# Math (for game logic)
nalgebra = { workspace = true }
