[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"
description = "A modular game engine written in Rust with Vulkan rendering"
license = "MIT OR Apache-2.0"
authors = ["Eric Winkler <ericrwinkler@gmail.com>"]
repository = "https://github.com/ericrwinkler/rusteroids"
keywords = ["game-engine", "vulkan", "ecs", "graphics"]
categories = ["game-engines", "graphics", "rendering"]

[dependencies]
# Core Vulkan and windowing
ash = { workspace = true }
ash-window = { workspace = true }
glfw = { workspace = true }
vk-sys = { workspace = true }
raw-window-handle = { workspace = true }
bytemuck = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Math
nalgebra = { workspace = true }
approx = { workspace = true }

# Image loading
image = { workspace = true }

# Text rendering
fontdue = "0.8"

# Audio
rodio = "0.18"

# Utility
bitflags = { workspace = true }
slotmap = { workspace = true }

# Memory management
vk-mem = { workspace = true }
